--- a/proccess.env
+++ b/proccess.env
@@ -1,5 +1,5 @@
 PORT=8080
 
-MONGO_DB_URL="mongodb://localhost:27017/my_db"
+MONGO_DB_URL="mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
 
 JWT_KEY="secret"
